iRedMail-0.9.6:
    * Improvements:
        - Nginx:
            - Add HSTS header for Roundcube, iRedAdmin, SOGo.
            - Add sample config files to run Roundcube, iRedAdmin, SOGo as a
              subdomain.

    * Fixed issues:
        - Not convert domain name and email address to lower cases while
          creating mail accounts with scripts tools/create_mail_user_*.
          Thanks Santosh Gupta <head.it _at_ satmatechnologies.com> for the
          report.
        - SOGo:
            - Not correctly redirect access to https in Apache.

        - Postfix:
            - Not enable opportunistic TLS support for remote smtp clients.
            - Incorrect HELO restriction rule which causes Postfix rejects smtp
              session with HELO "[IP_ADDRESS]" (with squared brackets).

        - Nginx:
            - Not forward real client IP address to SOGo.
            - Config file for catch-all virtual host `default.conf` has been
              renamed to `00-default.conf`, to make sure it will be loaded
              before other virtual host config files.

        - Roundcube webmail:
            - Not set proper file owner (apache/nginx) and permission (0600)
              for config file of password plugin.

        - OpenBSD:
            - not enable uwsgi service.
            - not create symbol links for PHP programs.

    * Updated packages:
        + Roundcube -> 1.2.0
        + iRedAdmin -> 0.6.1
        + uwsgi -> 2.0.13.1 (OpenBSD only)

iRedMail-0.9.5-1:
    * Fixed issues:
        - Postfix:
            - Cannot deliver email to system account.
        - OpenLDAP:
            - Incorrect default password scheme if module 'pw-sha2' is not
              available.
        - PHP
            - Allow functions: 'popen', 'openlog'. Required by Roundcube.
        - Incorrect compress command used in logrotate config files.
        - Add missing package 'mcrypt' on RHEL/CentOS 6.

    * Updated packages:
        + iRedAPD -> 1.9.1
