@@ -57,6 +57,7 @@ export POSTFIX_FILE_MAIN_CF="${POSTFIX_ROOTDIR}/main.cf"
 export POSTFIX_FILE_MASTER_CF="${POSTFIX_ROOTDIR}/master.cf"
 export POSTFIX_FILE_ALIASES="${POSTFIX_ROOTDIR}/aliases"
 export POSTFIX_FILE_HELO_ACCESS="${POSTFIX_ROOTDIR}/helo_access.pcre"
+export POSTFIX_FILE_SMTPD_COMMAND_FILTER="${POSTFIX_ROOTDIR}/command_filter.pcre"
 
 export POSTFIX_FILE_HEADER_CHECKS="${POSTFIX_ROOTDIR}/header_checks"
 export POSTFIX_FILE_BODY_CHECKS="${POSTFIX_ROOTDIR}/body_checks.pcre"
